--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
   sdk: ^3.9.2
 
 dependencies:
+  animate_do: ^4.2.0
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
@@ -16,6 +17,7 @@ dependencies:
   flutter_riverpod: ^3.0.3
   go_router: ^16.2.4
   card_swiper: ^3.0.1
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
